package nl.tudelft.context.model.graph;

/**
 * Graph.
 *
 * @author René Vennik <renevennik@gmail.com>
 * @version 1.0
 * @since 23-4-2015
 */
public class Graph extends DefaultGraph<Node> {

    /**
     * Create a Graph with default edges.
     */
    public Graph() {

    }

}
